# my_voxel_game

./: .gitignore  Cargo.toml  README.md  bevy.llm.txt  bevy_all_docs.lln.txt  noise.llm.text  rust.llm.txt  serde_documentation.txt
claude-output/: Cargo.toml
claude-output/src/: main.rs
o1pro-output/: Cargo.toml
o1pro-output/src/: chunk.rs  main.rs  voxel.rs  world.rs
src/: main.rs  player.rs  world.rs
