[package]
name = "o1pro-output"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.12"  # More recent stable version
noise = "0.8"
rand = "0.8"
hashbrown = "0.14"  # High performance hash maps
rayon = "1.8"      # Parallel processing support

[dev-dependencies]
criterion = "0.5"   # For benchmarking
bevy_test = "0.12"  # Bevy test utilities

# Enable optimizations for dependencies but not for our code in debug builds
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1      # Reasonable debug performance

[profile.release]
lto = "thin"       # Enable link-time optimization
codegen-units = 1  # Optimize for size and speed
